...
    <string name="title_activity_select_username">Select username</string>
    <string name="textViewUserNameSelection">Select your username for Yields !</string>
    <string name="editTextUsernameHint">Username</string>
    <string name="buttonCreateAccount">Create Account !</string>
    <string name="googleConnectionError">Could not connect to google services</string>
    <string name="appName">Yields</string>
    <string name="cancelText">Cancel</string>
    <string name="googleConnectingText">Connecting to Google services</string>
    <string name="textViewCreatingAccount">Creating account on Yields...</string>
    <string name="textViewLoggingIn">Logging in ...</string>
    <string name="messageUsernameTooShort">Username too short</string>
    <string name="messageUsernameContainsSpaces">Username can\'t contain spaces</string>

    <string name="entourage">Entourage</string>
    <string name="createGroup">Create group</string>
    <string name="settings">Settings</string>
    <string name="discover">Discover</string>
    <string name="title_activity_create_group">Create new group</string>
...
    <string name="connectIcon">Connect Icon</string>
    <string name="noConnectionText">No connection</string>
    <string name="saveImageToGalleryDialog">Save image to Gallery ?</string>
    <string name="saveImageAcceptButton">Save</string>
    <string name="saveImageDeclineButton">Cancel</string>
    <string name="addGroup">Add group</string>
    <string name="changeUserName">Change username</string>
    <string name="changeUserImage">Change your picture</string>
    <string name="logout">Logout</string>
    <string name="addNode">Add node</string>
    <string name="rss">RSS feed</string>
    <string name="enterUrl">Enter the feed\'s url</string>
    <string name="messageUrlHttp">The url must start with http:// or https://</string>
...
    <string name="messageContactAdded">User added to your entourage !</string>
    <string name="messageNoUser">No user exists with this email</string>
    <string name="leaveGroup">Leave group</string>
    <string name="enterKeyword">Leave empty to allow all feeds</string>
    <string name="typeKeywords">Then, type the keywords that the feed must contain to be published.</string>
    <string name="removeUsers">Select the contacts you want to remove from your entourage</string>
    <string name="removeFromEntourage">Remove contacts</string>
    <string name="messageNoGroup">Search for publishers, RSS feed, or create a new group to start using Yields !</string>
    <string name="nodes">Nodes</string>
    <string name="userInfo">See your info</string>
    <string name="messageGroupNameTooLong">The group name is too long</string>
    <string name="messageUsernameTooLong">The username is too long</string>
</resources>
