...
        android:icon="@drawable/ic_group_black_24dp"
        android:title="@string/entourage"
        android:layout_gravity="center"
        app:showAsAction="always"
    />

    <item android:id="@+id/actionDiscover"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/discover"
        android:layout_gravity="center"
        app:showAsAction="always"
        />

...
