...

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextCreateAccount"
        android:layout_gravity="center_horizontal"
        android:hint="@string/editTextUsernameHint"
        android:maxLength="80"
        android:maxLines="1">
        <requestFocus />
    </EditText>
...
