<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip"
    >

    <CheckBox
        android:id="@+id/checkboxUser"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
    />

    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_toRightOf="@id/checkboxUser"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:paddingLeft="15sp"
        android:src="@drawable/default_user_image"/>

    <TextView
        android:id="@+id/textViewUserName"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_toRightOf="@id/imageUser"
        android:singleLine="true"
        android:textSize="26sp"
        android:textColor="#000000"
        android:maxLines="1"
        android:paddingLeft="15sp"
        android:paddingTop="8sp"
        android:text="Username" />

</RelativeLayout>