<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="yields.client.activities.RemoveUsersFromEntourageActivity">

    <item android:id="@+id/actionDoneRemoveUsers"
        android:title="@string/done"
        android:layout_gravity="center"
        app:showAsAction="withText|ifRoom"
        />
</menu>